improve layout and try fix for hover on mobile

--- a/src/components/breadCrumb.module.scss
+++ b/src/components/breadCrumb.module.scss
@@ -8,7 +8,9 @@
     color: $color-primary;
 
     &:hover {
-      font-weight: 600;
+      @media (hover: hover) {
+        font-weight: 600;
+      }
     }
   }
 }
