--- a/src/components/languageSelect.module.scss
+++ b/src/components/languageSelect.module.scss
@@ -29,39 +29,31 @@
   white-space: nowrap;
   font-size: 1rem;
   line-height: 1.42857;
-  background: rgb(238, 237, 237) !important;
-  color: $color-text !important;
+  background: rgb(238, 237, 237);
+  color: $color-text;
   touch-action: manipulation;
   cursor: pointer;
   white-space: nowrap;
   border-radius: 0.8px;
   transition: all 0.3s;
-  border: none !important;
+  border: none;
 
   &:focus {
     outline: 0;
   }
 
   &:hover {
-    background: $color-primary-light !important;
-    color: $color-text-white !important;
-    outline: none !important;
-  }
-
-  @media (hover: none) {
-    background: rgb(238, 237, 237) !important;
-    color: $color-text !important;
+    @media (hover: hover) {
+      background: $color-primary-light;
+      color: $color-text-white;
+      outline: none;
+    }
   }
 }
 
 .switchBtnActive {
   @extend .switchBtn;
 
-  background: $color-tertiary !important;
-  color: $color-text !important;
-
-  @media (hover: none) {
-    background: $color-tertiary !important;
-    color: $color-text !important;
-  }
+  background: $color-tertiary;
+  color: $color-text;
 }
