--- a/src/layout/markdown-page-layout.module.scss
+++ b/src/layout/markdown-page-layout.module.scss
@@ -12,7 +12,7 @@
     margin: 15rem 20rem 20rem 20rem;
   }
   @media only screen and (max-width: 1040px) {
-    margin: 15rem 15rem 20rem 15rem;
+    margin: 15rem 6rem 20rem 6rem;
   }
   @media only screen and (max-width: 760px) {
     margin: 15rem 4rem 20rem 4rem;
@@ -24,8 +24,9 @@
   h1 {
     font-size: 2.5rem;
     text-align: center;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
     text-transform: uppercase;
+    margin-top: 2rem;
   }
 
   h2 {
