--- a/src/layout/module-layout.module.scss
+++ b/src/layout/module-layout.module.scss
@@ -9,7 +9,7 @@
     margin: 15rem 20rem 20rem 20rem;
   }
   @media only screen and (max-width: 1040px) {
-    margin: 15rem 15rem 20rem 15rem;
+    margin: 15rem 6rem 20rem 6rem;
   }
   @media only screen and (max-width: 760px) {
     margin: 15rem 4rem 20rem 4rem;
@@ -21,8 +21,9 @@
   h1 {
     text-align: center;
     font-size: 2.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 4rem;
     text-transform: uppercase;
+    margin-top: 2rem;
   }
 
   h2 {
